--- a/views/home.hbs
+++ b/views/home.hbs
@@ -111,7 +111,17 @@
     <!-- home wrapper -->
     <div class="home-wrapper">
       <!-- container -->
-      <div class="container">
+      <div class="container" style="
+          {{!-- background-image: url(img/illustration.png);
+  background-position: -10rem 5rem;
+  background-repeat: no-repeat; --}}
+      ">
+        <img src="img/main.png" class="img-responsive" alt="" style="
+            
+        ">
+        {{!-- <img src="img/illustration.png" class="img-bg" alt="" style="
+            
+        "> --}}
         <!-- row -->
         <div class="row">
           <!-- home content -->
@@ -122,13 +132,13 @@
               <h4 class="lead">Root to Ideas</h4>
             </div>
 -->
-            <div class="home-content jumbotron" style="background-color: transparent;border-radius: 20px">
+            <div class="home-content" style="">
               <h1 style="font-family: lato"><img src="img/logo_only1.png" class="animated rotateIn delay-1s" style=""
-                  width="100px">&nbsp;<span style="color: #bd0c0e">DOT</span><span style="color: black">SLASH</span></h1>
-              <h4 class="lead" style="font-size: 25px;color: black; text-shadow:0 0 5px white">Root to Ideas</h4>
-              <h5 class="lead" style="font-size: 30px;color: white;text-shadow:0 0 8px #bd0c0e ;font-weight:800">
-                <span style="font-size:20px">Powered by</span> ASHINE </h5>
-              <h3 class="lead" style="font-size: 20px;color: white;text-shadow:0 0 8px #bd0c0e ;font-weight:600">Coming Soon....</h3>
+                  width="20%">&nbsp;<span style="color: #bd0c0e">DOT</span><span style="color: black">SLASH</span><span style="color: black; margin-top: 1rem;"> 4.0</span></h1>
+              <h4 class="lead" style="font-size: 25px;color: black; text-shadow:0 0 5px white;">Root to Ideas</h4>
+              <h5 class="lead" style="font-size: 30px;color: black;">
+              <h3 class="lead" style="box-shadow: 3px 3px #5d5d5d;font-size: 20px;color: #bd0c0e;font-weight:600; border: 1px solid black; border-radius: 20px; padding: 10px;">Coming Soon!</h3>
+              <h3 class="lead"><span style="font-size:20px">Powered by</span> <span style="font-weight: 600">ASHINE</span></h3>
               {{!-- <button class="" id="devfolio-apply-now1"><svg class="logo" xmlns="http://www.w3.org/2000/svg" fill="#fff"
                   viewBox="0 0 115.46 123.46" style="height:24px;width:24px;margin-right:8px">
                   <path d="M115.46 68a55.43 55.43 0 0 1-50.85 55.11S28.12 124 16 123a12.6 12.6 0 0 1-10.09-7.5 15.85 15.85 0 0 0 5.36 1.5c4 .34 10.72.51 20.13.51 13.82 0 28.84-.38 29-.38h.26a60.14 60.14 0 0 0 54.72-52.47c.05 1.05.08 2.18.08 3.34z" />
@@ -431,7 +441,7 @@
               <!--</div>-->
             <!--</div>-->
             <!--[> /event <]-->
-            <!--{{!-- <div class="event">-->
+            <!--<div class="event">-->
               <!--<div class="event-hour"></div>-->
               <!--<div class="event-content">-->
                 <!--<p class="event-time"><i class="fa fa-clock-o"></i> 10 : 45 AM</p>-->
@@ -439,7 +449,7 @@
                 <!--<p>API demo from Matic. Also Devfolio make the hackers understand the basics of their platform.-->
                 <!--</p>-->
               <!--</div>-->
-            <!--</div> --}}-->
+            <!--</div>-->
             <!--[> event <]-->
             <!--[> /event <]-->
 
