--- a/views/home.hbs
+++ b/views/home.hbs
@@ -633,33 +633,6 @@
 					<a href="https://www.teqip.in/" target="_blank" class="sponsor">
 						<img src="./img/teqip.png" alt="">
 					</a>
-          <a href="https://www.jetbrains.com/" target="_blank" class="sponsor">
-            <img src="./img/jetbrains.jpeg" alt="">
-          </a>
-           <a href="https://matic.network/" target="_blank" class="sponsor">
-            <img src="img/Matic.png" alt="">
-          </a>
-          <a href="https://zujo.io/" target="_blank" class="sponsor">
-            <img src="img/juzo.png" alt="">
-          </a>
-          <a href="https://www.bugsee.com/" target="_blank" class="sponsor">
-            <img src="img/bugsee.png" alt="">
-          </a>
-          <a href="https://www.aasaanjobs.com/" style="opacity:1" target="_blank" class="sponsor">
-            <img src="img/aasanjobs.png" alt="">
-          </a>
-          <a href="https://monday.com/" style="opacity:1" target="_blank" class="sponsor">
-            <img src="img/mo.png" alt="">
-          </a>
-          <a href="https://get.tech/" target="_blank" class="sponsor">
-            <img src="img/tech-logo.jpg" alt="">
-          </a>
-          <a href="http://www.ssipgujarat.in" style="opacity:1" target="_blank" class="sponsor">
-            <img src="img/ssip.jpeg" alt="">
-          </a>
-          <a href="https://backbuckle.io/" target="_blank" class="sponsor">
-            <img src="img/BBLogo1.png" alt="">
-          </a>
           <a href="https://www.agora.io/" target="_blank" class="sponsor">
             <img src="img/agora.png" alt="">
           </a>
@@ -687,20 +660,38 @@
           <a href="https://www.linode.com/" target="_blank" class="sponsor">
             <img src="img/linode-logo.png" alt="">
           </a>
+          <a href="https://www.jetbrains.com/" target="_blank" class="sponsor">
+            <img src="./img/jetbrains.png" alt="">
+          </a>
+           <a href="https://matic.network/" target="_blank" class="sponsor">
+            <img src="img/Matic.png" alt="">
+          </a>
+          <a href="https://zujo.io/" target="_blank" class="sponsor">
+            <img src="img/juzo.png" alt="">
+          </a>
+          <a href="https://www.bugsee.com/" target="_blank" class="sponsor">
+            <img src="img/bugsee.png" alt="">
+          </a>
+          <a href="https://www.aasaanjobs.com/" style="opacity:1" target="_blank" class="sponsor">
+            <img src="img/aasanjobs.png" alt="">
+          </a>
+          <a href="https://monday.com/" style="opacity:1" target="_blank" class="sponsor">
+            <img src="img/mo.png" alt="">
+          </a>
+          <a href="https://get.tech/" target="_blank" class="sponsor">
+            <img src="img/tech-logo.jpg" alt="">
+          </a>
+          <a href="http://www.ssipgujarat.in" style="opacity:1" target="_blank" class="sponsor">
+            <img src="img/ssip.jpeg" alt="">
+          </a>
+          <a href="https://backbuckle.io/" target="_blank" class="sponsor">
+            <img src="img/BBLogo1.png" alt="">
+          </a>
           <a href="https://oswaldlabs.com/" target="_blank" class="sponsor">
             <img src="img/oswald-lab.png" alt="">
           </a>
-          <a href="https://pomodoneapp.com/" target="_blank" class="sponsor">
-            <img src="img/pomodone-logo.png" alt="">
-          </a>
-          <a href="https://www.sketch.com/" target="_blank" class="sponsor">
-            <img src="img/sketch-logo-light-transparent.png" alt="">
-          </a>
           <a href="https://rosenfeldmedia.com/" target="_blank" class="sponsor">
             <img src="img/rosenfeld.jpg" alt="">
-          </a>
-          <a href="https://www.uxpin.com/" target="_blank" class="sponsor">
-            <img src="img/UXPin-Logo-BlackFill@2x.png" alt="">
           </a>
           <a href="https://www.womenwhocode.com/" target="_blank" class="sponsor">
             <img src="img/wwc.jpg" alt="">
@@ -708,8 +699,14 @@
           <a href="https://zubi.io/" target="_blank" class="sponsor">
             <img src="img/zubi.png" alt="">
           </a>
+          <a href="https://www.uxpin.com/" target="_blank" class="sponsor">
+            <img src="img/UXPin-Logo-BlackFill@2x.png" alt="">
+          </a>
           <a href="https://www.producthunt.com/" target="_blank" class="sponsor">
-            <img src="img/profucthunt-logo.png" alt="">
+            <img src="img/profucthunt-logo.png" alt="" style="width: 20rem;">
+          </a>
+          <a href="https://pomodoneapp.com/" target="_blank" class="sponsor">
+            <img src="img/pomodone-logo.png" alt="" style="width: 20rem;">
           </a>
         </div>
       <!-- /row -->
