--- a/public/css/style.css
+++ b/public/css/style.css
@@ -458,7 +458,7 @@ button:focus {
 .home-content {
   width: 60vw;
   top: 50%;
-  left: 15%;
+  left: 18%;
   width: 65%;
   border-radius: 25px;
 }
@@ -1316,6 +1316,10 @@ div.home-content {
 ===========================================================*/
 
 @media only screen and (max-width: 991px) {
+  div.home-content {
+    left: auto;
+  }
+
   .contact-social {
     text-align: center;
     margin: 30px 0px;
