--- a/views/home.hbs
+++ b/views/home.hbs
@@ -632,6 +632,9 @@
           <a href="https://www.producthunt.com/" target="_blank" class="sponsor">
             <img src="img/profucthunt-logo.png" alt="" style="width: 15rem;">
           </a>
+          <a href="https://balsamiq.com/" target="_blank" class="sponsor">
+            <img src="img/balsamiq.svg" alt="">
+          </a>
         </div>
       <!-- /row -->
     </div>
