--- a/views/home.hbs
+++ b/views/home.hbs
@@ -635,6 +635,9 @@
           <a href="https://balsamiq.com/" target="_blank" class="sponsor">
             <img src="img/balsamiq.svg" alt="">
           </a>
+          <a href="https://www.wolfram.com/" target="_blank" class="sponsor">
+            <img src="img/wolfram.jpg" alt="">
+          </a>
         </div>
       <!-- /row -->
     </div>
