--- a/views/home.hbs
+++ b/views/home.hbs
@@ -138,6 +138,7 @@
                     style="color: black">SLASH</span><span style="color: black; margin-top: 1rem;"> 4.0</span></h1>
                 <h4 class="lead" style="font-size: 25px;color: black; text-shadow:0 0 5px white;">Root to Ideas</h4>
                 <h5 class="lead" style="font-size: 30px;color: black;">
+                  <button class="" id="devfolio-apply-now1" onclick="register()">Register </button>
                   <h3 class="lead"
                     style="box-shadow: 3px 3px #5d5d5d;font-size: 20px;color: #bd0c0e;font-weight:600; border: 1px solid black; border-radius: 10px; padding: 10px;">
                     30-31st January, 2021</h3>
@@ -147,8 +148,6 @@
                   viewBox="0 0 115.46 123.46" style="height:24px;width:24px;margin-right:8px">
                   <path d="M115.46 68a55.43 55.43 0 0 1-50.85 55.11S28.12 124 16 123a12.6 12.6 0 0 1-10.09-7.5 15.85 15.85 0 0 0 5.36 1.5c4 .34 10.72.51 20.13.51 13.82 0 28.84-.38 29-.38h.26a60.14 60.14 0 0 0 54.72-52.47c.05 1.05.08 2.18.08 3.34z" />
                   <path d="M110.93 55.87A55.43 55.43 0 0 1 60.08 111s-36.48.92-48.58-.12C5 110.29.15 104.22 0 97.52l.2-83.84C.38 7 5.26.94 11.76.41c12.11-1 48.59.12 48.59.12a55.41 55.41 0 0 1 50.58 55.34z" /></svg>Apply
-                </button> --}}
-                  {{!-- <button class="" id="devfolio-apply-now1" onclick="register()">Register
                 </button> --}}
               </div>
             </div>
@@ -1036,18 +1035,13 @@
                 <!-- cta content -->
                 <div class="col-md-8 col-md-offset-2">
                   <div class="cta-content text-center">
-                    <h2>Registrations starting soon</h2>
+                    <h2>Registrations started</h2>
                     <p class="lead">Our focus is on letting your imagination flow free and enable you to push the
                       boundaries of
                       what can be done. We're open for all! We'll take care of the food and stay - virtually leaving
                       you no excuse to not build something that'll blow our minds.</p>
-                    {{!-- <button class="" id="devfolio-apply-now2"><svg class="logo" xmlns="http://www.w3.org/2000/svg" fill="#fff"
-                viewBox="0 0 115.46 123.46" style="height:24px;width:24px;margin-right:8px">
-                <path d="M115.46 68a55.43 55.43 0 0 1-50.85 55.11S28.12 124 16 123a12.6 12.6 0 0 1-10.09-7.5 15.85 15.85 0 0 0 5.36 1.5c4 .34 10.72.51 20.13.51 13.82 0 28.84-.38 29-.38h.26a60.14 60.14 0 0 0 54.72-52.47c.05 1.05.08 2.18.08 3.34z" />
-                <path d="M110.93 55.87A55.43 55.43 0 0 1 60.08 111s-36.48.92-48.58-.12C5 110.29.15 104.22 0 97.52l.2-83.84C.38 7 5.26.94 11.76.41c12.11-1 48.59.12 48.59.12a55.41 55.41 0 0 1 50.58 55.34z" /></svg>Apply
-              with Devfolio</button> --}}
-                    {{!-- <button class="" id="devfolio-apply-now1" onclick="register()">Register
-                </button> --}}
+                    {{!-- <button class="" id="devfolio-apply-now2">Apply with Devfolio</button> --}}
+                    <button class="" id="devfolio-apply-now1" onclick="register()">Register </button>
 
                   </div>
                 </div>
